Proyecto1/Parser/parser.output
State 62 conflicts: 1 shift/reduce
State 192 conflicts: 1 shift/reduce
State 243 conflicts: 1 shift/reduce
State 268 conflicts: 1 shift/reduce


Grammar

    0 $accept: START END

    1 START: MAIN
    2      | LIST_FUNC MAIN
    3      | LIST_STRUCT LIST_FUNC MAIN

    4 LIST_FUNC: LIST_FUNC FUNCTION
    5          | FUNCTION

    6 LIST_STRUCT: LIST_STRUCT DECLARE_STRUCT
    7            | DECLARE_STRUCT

    8 FUNCTION: TYPES ID PARA FUNCTION_LIST PARC LLAVA LIST_INST LLAVC
    9         | TYPES ID PARA PARC LLAVA LIST_INST LLAVC
   10         | ID ID PARA FUNCTION_LIST PARC LLAVA LIST_INST LLAVC

   11 FUNCTION_LIST: FUNCTION_LIST ',' TYPES ID
   12              | FUNCTION_LIST ',' RVECTOR MENOR TYPES MAYOR ID
   13              | FUNCTION_LIST ',' TYPES ID CORA EXP CORC
   14              | FUNCTION_LIST ',' TYPES ID CORA EXP CORC CORA EXP CORC CORA EXP CORC
   15              | TYPES ID
   16              | RVECTOR MENOR TYPES MAYOR ID
   17              | TYPES ID CORA EXP CORC
   18              | TYPES ID CORA EXP CORC CORA EXP CORC CORA EXP CORC

   19 MAIN: TYPES RMAIN PARA PARC LLAVA LIST_INST LLAVC

   20 LIST_INST: LIST_INST INSTRUCTION
   21          | INSTRUCTION

   22 INSTRUCTION: PRINT ';'
   23            | EXPRESSION ';'
   24            | IF
   25            | WHILE
   26            | FOR
   27            | DECLARATION ';'
   28            | ASSIGNATION ';'
   29            | CREATE_STRUCT
   30            | DECLARE_STRUCT
   31            | DECLARE_VECTOR ';'
   32            | DECLARE_MATRIX ';'
   33            | BREAK ';'
   34            | CONTINUE ';'
   35            | RETURN ';'
   36            | CALL_INST
   37            | PUSHBACK ';'
   38            | PUSHFRONT ';'
   39            | REMOVE ';'

   40 PRINT: PRINTF PARA EXP_LIST PARC

   41 PUSHBACK: ID '.' VPBACK PARA EXP PARC

   42 PUSHFRONT: ID '.' VPFRONT PARA EXP PARC

   43 GET: ID '.' VGET PARA EXP PARC

   44 SIZE: ID '.' VSIZE PARA PARC

   45 REMOVE: ID '.' VREMOVE PARA EXP PARC

   46 IF: RIF EXP LLAVA LIST_INST LLAVC ELSEIF_LIST ELSE
   47   | RIF EXP LLAVA LIST_INST LLAVC
   48   | RIF EXP LLAVA LIST_INST LLAVC ELSEIF_LIST
   49   | RIF EXP LLAVA LIST_INST LLAVC ELSE

   50 ELSEIF_LIST: ELSEIF_LIST ELSEIF
   51            | ELSEIF

   52 ELSEIF: RELSE RIF EXP LLAVA LIST_INST LLAVC

   53 ELSE: RELSE LLAVA LIST_INST LLAVC

   54 WHILE: RWHILE PARA EXP PARC LLAVA LIST_INST LLAVC

   55 FOR: RFOR PARA DECLARATION ';' EXP ';' EXP PARC LLAVA LIST_INST LLAVC

   56 EXPRESSION: EXP

   57 DECLARE_STRUCT: RSTRUCT ID LLAVA DECLARE_LIST LLAVC

   58 DECLARE_LIST: DECLARE_LIST TYPES ID ';'
   59             | DECLARE_LIST ID ID ';'
   60             | TYPES ID ';'
   61             | ID ID ';'

   62 CREATE_STRUCT: RSTRUCT ID ID '=' LLAVA EXP_LIST LLAVC ';'

   63 EXP_LIST: EXP_LIST ',' EXP
   64         | EXP

   65 DECLARATION: TYPES ID '=' EXP
   66            | TYPES ID

   67 ASSIGNATION: ID '=' EXP
   68            | ID CORA PRIMITIVE CORC '=' PRIMITIVE
   69            | ID '.' ID '=' EXP

   70 BREAK: RBREAK

   71 CONTINUE: RCONTINUE

   72 RETURN: RRETURN EXP
   73       | RRETURN

   74 MEAN: RMEAN PARA ID PARC

   75 MEDIAN: RMEDIAN PARA ID PARC

   76 MODE: RMODE PARA ID PARC

   77 TYPES: INT
   78      | TSTRING
   79      | BOOLEAN
   80      | FLOAT
   81      | VOID
   82      | RVECTOR

   83 EXP: EXP SUMA EXP
   84    | EXP MENOS EXP
   85    | EXP POR EXP
   86    | EXP DIV EXP
   87    | EXP MOD EXP
   88    | INCREMENT
   89    | EXP MAYOR EXP
   90    | EXP MAYEQU EXP
   91    | EXP MENOR EXP
   92    | EXP MENEQU EXP
   93    | EXP EQU EXP
   94    | EXP DIFF EXP
   95    | EXP AND EXP
   96    | EXP OR EXP
   97    | NOT EXP
   98    | MENOS EXP
   99    | PARA EXP PARC
  100    | ATOI
  101    | ATOF
  102    | IOTA
  103    | CORA EXP_LIST CORC
  104    | CALL_EXP
  105    | GET
  106    | SIZE
  107    | MEAN
  108    | MEDIAN
  109    | MODE
  110    | PRIMITIVE
  111    | STRUCT_ACCESS

  112 ATOI: RATOI PARA PRIMITIVE PARC

  113 ATOF: RATOF PARA PRIMITIVE PARC

  114 IOTA: RIOTA PARA EXP PARC

  115 INCREMENT: PRIMITIVE INC

  116 PRIMITIVE: NUMERO
  117          | STRING
  118          | NLL
  119          | BOOLTRUE
  120          | BOOLFALSE
  121          | LIST_ARR

  122 LIST_ARR: LIST_ARR CORA EXP CORC CORA EXP CORC
  123         | LIST_ARR CORA EXP CORC
  124         | ID

  125 STRUCT_ACCESS: ID '.' ID
  126              | ID '.' ID '.' ID

  127 DECLARE_VECTOR: RVECTOR MENOR TYPES MAYOR ID '=' EXP
  128               | RVECTOR MENOR TYPES MAYOR ID

  129 DECLARE_MATRIX: TYPES ID CORA PRIMITIVE CORC '=' CORA EXP_LIST CORC
  130               | TYPES ID CORA PRIMITIVE CORC CORA PRIMITIVE CORC '=' CORA EXP_LIST CORC
  131               | TYPES ID CORA PRIMITIVE CORC CORA PRIMITIVE CORC CORA PRIMITIVE CORC '=' CORA EXP_LIST CORC

  132 CALL_EXP: ID PARA EXP_LIST PARC
  133         | ID PARA PARC

  134 CALL_INST: ID PARA EXP_LIST PARC ';'
  135          | ID PARA PARC ';'


Terminals, with rules where they appear

    END (0) 0
    ',' (44) 11 12 13 14 63
    '.' (46) 41 42 43 44 45 69 125 126
    ';' (59) 22 23 27 28 31 32 33 34 35 37 38 39 55 58 59 60 61 62 134 135
    '=' (61) 62 65 67 68 69 127 129 130 131
    error (256)
    NUMERO <std::string> (258) 116
    ID <std::string> (259) 8 9 10 11 12 13 14 15 16 17 18 41 42 43 44 45 57 58 59 60 61 62 65 66 67 68 69 74 75 76 124 125 126 127 128 129 130 131 132 133 134 135
    STRING <std::string> (260) 117
    TSTRING <std::string> (261) 78
    FLOAT <std::string> (262) 80
    BOOLEAN <std::string> (263) 79
    RSTRUCT <std::string> (264) 57 62
    RVECTOR <std::string> (265) 12 16 82 127 128
    INT <std::string> (266) 77
    BOOLTRUE <std::string> (267) 119
    BOOLFALSE <std::string> (268) 120
    PARA <std::string> (269) 8 9 10 19 40 41 42 43 44 45 54 55 74 75 76 99 112 113 114 132 133 134 135
    PARC <std::string> (270) 8 9 10 19 40 41 42 43 44 45 54 55 74 75 76 99 112 113 114 132 133 134 135
    LLAVA <std::string> (271) 8 9 10 19 46 47 48 49 52 53 54 55 57 62
    LLAVC <std::string> (272) 8 9 10 19 46 47 48 49 52 53 54 55 57 62
    CORA <std::string> (273) 13 14 17 18 68 103 122 123 129 130 131
    CORC <std::string> (274) 13 14 17 18 68 103 122 123 129 130 131
    VOID <std::string> (275) 81
    RMAIN <std::string> (276) 19
    NLL <std::string> (277) 118
    SUMA <std::string> (278) 83
    MENOS <std::string> (279) 84 98
    POR <std::string> (280) 85
    DIV <std::string> (281) 86
    INC <std::string> (282) 115
    MOD <std::string> (283) 87
    RIF <std::string> (284) 46 47 48 49 52
    RELSE <std::string> (285) 52 53
    RWHILE <std::string> (286) 54
    RFOR <std::string> (287) 55
    PRINTF <std::string> (288) 40
    RMEAN <std::string> (289) 74
    RMEDIAN <std::string> (290) 75
    RMODE <std::string> (291) 76
    RATOI <std::string> (292) 112
    RATOF <std::string> (293) 113
    RIOTA <std::string> (294) 114
    RBREAK <std::string> (295) 70
    RCONTINUE <std::string> (296) 71
    RRETURN <std::string> (297) 72 73
    MAYOR <std::string> (298) 12 16 89 127 128
    MENOR <std::string> (299) 12 16 91 127 128
    MAYEQU <std::string> (300) 90
    MENEQU <std::string> (301) 92
    EQU <std::string> (302) 93
    DIFF <std::string> (303) 94
    AND <std::string> (304) 95
    OR <std::string> (305) 96
    NOT <std::string> (306) 97
    VPBACK <std::string> (307) 41
    VGET <std::string> (308) 43
    VREMOVE <std::string> (309) 45
    VSIZE <std::string> (310) 44
    VPFRONT <std::string> (311) 42


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    START <func_main*> (62)
        on left: 1 2 3
        on right: 0
    LIST_FUNC <list_instruction*> (63)
        on left: 4 5
        on right: 2 3 4
    LIST_STRUCT <list_instruction*> (64)
        on left: 6 7
        on right: 3 6
    FUNCTION <instruction*> (65)
        on left: 8 9 10
        on right: 4 5
    FUNCTION_LIST <map_struct_dec*> (66)
        on left: 11 12 13 14 15 16 17 18
        on right: 8 10 11 12 13 14
    MAIN <func_main*> (67)
        on left: 19
        on right: 1 2 3
    LIST_INST <list_instruction*> (68)
        on left: 20 21
        on right: 8 9 10 19 20 46 47 48 49 52 53 54 55
    INSTRUCTION <instruction*> (69)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 20 21
    PRINT <instruction*> (70)
        on left: 40
        on right: 22
    PUSHBACK <instruction*> (71)
        on left: 41
        on right: 37
    PUSHFRONT <instruction*> (72)
        on left: 42
        on right: 38
    GET <expression*> (73)
        on left: 43
        on right: 105
    SIZE <expression*> (74)
        on left: 44
        on right: 106
    REMOVE <instruction*> (75)
        on left: 45
        on right: 39
    IF <instruction*> (76)
        on left: 46 47 48 49
        on right: 24
    ELSEIF_LIST <list_instruction*> (77)
        on left: 50 51
        on right: 46 48 50
    ELSEIF <instruction*> (78)
        on left: 52
        on right: 50 51
    ELSE <list_instruction*> (79)
        on left: 53
        on right: 46 49
    WHILE <instruction*> (80)
        on left: 54
        on right: 25
    FOR <instruction*> (81)
        on left: 55
        on right: 26
    EXPRESSION <instruction*> (82)
        on left: 56
        on right: 23
    DECLARE_STRUCT <instruction*> (83)
        on left: 57
        on right: 6 7 30
    DECLARE_LIST <map_struct_dec*> (84)
        on left: 58 59 60 61
        on right: 57 58 59
    CREATE_STRUCT <instruction*> (85)
        on left: 62
        on right: 29
    EXP_LIST <list_expression*> (86)
        on left: 63 64
        on right: 40 62 63 103 129 130 131 132 134
    DECLARATION <instruction*> (87)
        on left: 65 66
        on right: 27 55
    ASSIGNATION <instruction*> (88)
        on left: 67 68 69
        on right: 28
    BREAK <instruction*> (89)
        on left: 70
        on right: 33
    CONTINUE <instruction*> (90)
        on left: 71
        on right: 34
    RETURN <instruction*> (91)
        on left: 72 73
        on right: 35
    MEAN <expression*> (92)
        on left: 74
        on right: 107
    MEDIAN <expression*> (93)
        on left: 75
        on right: 108
    MODE <expression*> (94)
        on left: 76
        on right: 109
    TYPES <TipoDato> (95)
        on left: 77 78 79 80 81 82
        on right: 8 9 11 12 13 14 15 16 17 18 19 58 60 65 66 127 128 129 130 131
    EXP <expression*> (96)
        on left: 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 13 14 17 18 41 42 43 45 46 47 48 49 52 54 55 56 63 64 65 67 69 72 83 84 85 86 87 89 90 91 92 93 94 95 96 97 98 99 114 122 123 127
    ATOI <expression*> (97)
        on left: 112
        on right: 100
    ATOF <expression*> (98)
        on left: 113
        on right: 101
    IOTA <expression*> (99)
        on left: 114
        on right: 102
    INCREMENT <expression*> (100)
        on left: 115
        on right: 88
    PRIMITIVE <expression*> (101)
        on left: 116 117 118 119 120 121
        on right: 68 110 112 113 115 129 130 131
    LIST_ARR <expression*> (102)
        on left: 122 123 124
        on right: 121 122 123
    STRUCT_ACCESS <expression*> (103)
        on left: 125 126
        on right: 111
    DECLARE_VECTOR <instruction*> (104)
        on left: 127 128
        on right: 31
    DECLARE_MATRIX <instruction*> (105)
        on left: 129 130 131
        on right: 32
    CALL_EXP <expression*> (106)
        on left: 132 133
        on right: 104
    CALL_INST <instruction*> (107)
        on left: 134 135
        on right: 36


State 0

    0 $accept: . START END

    ID       shift, and go to state 1
    TSTRING  shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    RSTRUCT  shift, and go to state 5
    RVECTOR  shift, and go to state 6
    INT      shift, and go to state 7
    VOID     shift, and go to state 8

    START           go to state 9
    LIST_FUNC       go to state 10
    LIST_STRUCT     go to state 11
    FUNCTION        go to state 12
    MAIN            go to state 13
    DECLARE_STRUCT  go to state 14
    TYPES           go to state 15


State 1

   10 FUNCTION: ID . ID PARA FUNCTION_LIST PARC LLAVA LIST_INST LLAVC

    ID  shift, and go to state 16


State 2

   78 TYPES: TSTRING .

    $default  reduce using rule 78 (TYPES)


State 3

   80 TYPES: FLOAT .

    $default  reduce using rule 80 (TYPES)


State 4

   79 TYPES: BOOLEAN .

    $default  reduce using rule 79 (TYPES)


State 5

   57 DECLARE_STRUCT: RSTRUCT . ID LLAVA DECLARE_LIST LLAVC

    ID  shift, and go to state 17


State 6

   82 TYPES: RVECTOR .

    $default  reduce using rule 82 (TYPES)


State 7

   77 TYPES: INT .

    $default  reduce using rule 77 (TYPES)


State 8

   81 TYPES: VOID .

    $default  reduce using rule 81 (TYPES)


State 9

    0 $accept: START . END

    END  shift, and go to state 18


State 10

    2 START: LIST_FUNC . MAIN
    4 LIST_FUNC: LIST_FUNC . FUNCTION

    ID       shift, and go to state 1
    TSTRING  shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    RVECTOR  shift, and go to state 6
    INT      shift, and go to state 7
    VOID     shift, and go to state 8

    FUNCTION  go to state 19
    MAIN      go to state 20
    TYPES     go to state 15


State 11

    3 START: LIST_STRUCT . LIST_FUNC MAIN
    6 LIST_STRUCT: LIST_STRUCT . DECLARE_STRUCT

    ID       shift, and go to state 1
    TSTRING  shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    RSTRUCT  shift, and go to state 5
    RVECTOR  shift, and go to state 6
    INT      shift, and go to state 7
    VOID     shift, and go to state 8

    LIST_FUNC       go to state 21
    FUNCTION        go to state 12
    DECLARE_STRUCT  go to state 22
    TYPES           go to state 23


State 12

    5 LIST_FUNC: FUNCTION .

    $default  reduce using rule 5 (LIST_FUNC)


State 13

    1 START: MAIN .

    $default  reduce using rule 1 (START)


State 14

    7 LIST_STRUCT: DECLARE_STRUCT .

    $default  reduce using rule 7 (LIST_STRUCT)


State 15

    8 FUNCTION: TYPES . ID PARA FUNCTION_LIST PARC LLAVA LIST_INST LLAVC
    9         | TYPES . ID PARA PARC LLAVA LIST_INST LLAVC
   19 MAIN: TYPES . RMAIN PARA PARC LLAVA LIST_INST LLAVC

    ID     shift, and go to state 24
    RMAIN  shift, and go to state 25


State 16

   10 FUNCTION: ID ID . PARA FUNCTION_LIST PARC LLAVA LIST_INST LLAVC

    PARA  shift, and go to state 26


State 17

   57 DECLARE_STRUCT: RSTRUCT ID . LLAVA DECLARE_LIST LLAVC

    LLAVA  shift, and go to state 27


State 18

    0 $accept: START END .

    $default  accept


State 19

    4 LIST_FUNC: LIST_FUNC FUNCTION .

    $default  reduce using rule 4 (LIST_FUNC)


State 20

    2 START: LIST_FUNC MAIN .

    $default  reduce using rule 2 (START)


State 21

    3 START: LIST_STRUCT LIST_FUNC . MAIN
    4 LIST_FUNC: LIST_FUNC . FUNCTION

    ID       shift, and go to state 1
    TSTRING  shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    RVECTOR  shift, and go to state 6
    INT      shift, and go to state 7
    VOID     shift, and go to state 8

    FUNCTION  go to state 19
    MAIN      go to state 28
    TYPES     go to state 15


State 22

    6 LIST_STRUCT: LIST_STRUCT DECLARE_STRUCT .

    $default  reduce using rule 6 (LIST_STRUCT)


State 23

    8 FUNCTION: TYPES . ID PARA FUNCTION_LIST PARC LLAVA LIST_INST LLAVC
    9         | TYPES . ID PARA PARC LLAVA LIST_INST LLAVC

    ID  shift, and go to state 24


State 24

    8 FUNCTION: TYPES ID . PARA FUNCTION_LIST PARC LLAVA LIST_INST LLAVC
    9         | TYPES ID . PARA PARC LLAVA LIST_INST LLAVC

    PARA  shift, and go to state 29


State 25

   19 MAIN: TYPES RMAIN . PARA PARC LLAVA LIST_INST LLAVC

    PARA  shift, and go to state 30


State 26

   10 FUNCTION: ID ID PARA . FUNCTION_LIST PARC LLAVA LIST_INST LLAVC

    TSTRING  shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    RVECTOR  shift, and go to state 31
    INT      shift, and go to state 7
    VOID     shift, and go to state 8

    FUNCTION_LIST  go to state 32
    TYPES          go to state 33


State 27

   57 DECLARE_STRUCT: RSTRUCT ID LLAVA . DECLARE_LIST LLAVC

    ID       shift, and go to state 34
    TSTRING  shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    RVECTOR  shift, and go to state 6
    INT      shift, and go to state 7
    VOID     shift, and go to state 8

    DECLARE_LIST  go to state 35
    TYPES         go to state 36


State 28

    3 START: LIST_STRUCT LIST_FUNC MAIN .

    $default  reduce using rule 3 (START)


State 29

    8 FUNCTION: TYPES ID PARA . FUNCTION_LIST PARC LLAVA LIST_INST LLAVC
    9         | TYPES ID PARA . PARC LLAVA LIST_INST LLAVC

    TSTRING  shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    RVECTOR  shift, and go to state 31
    INT      shift, and go to state 7
    PARC     shift, and go to state 37
    VOID     shift, and go to state 8

    FUNCTION_LIST  go to state 38
    TYPES          go to state 33


State 30

   19 MAIN: TYPES RMAIN PARA . PARC LLAVA LIST_INST LLAVC

    PARC  shift, and go to state 39


State 31

   16 FUNCTION_LIST: RVECTOR . MENOR TYPES MAYOR ID
   82 TYPES: RVECTOR .

    MENOR  shift, and go to state 40

    $default  reduce using rule 82 (TYPES)


State 32

   10 FUNCTION: ID ID PARA FUNCTION_LIST . PARC LLAVA LIST_INST LLAVC
   11 FUNCTION_LIST: FUNCTION_LIST . ',' TYPES ID
   12              | FUNCTION_LIST . ',' RVECTOR MENOR TYPES MAYOR ID
   13              | FUNCTION_LIST . ',' TYPES ID CORA EXP CORC
   14              | FUNCTION_LIST . ',' TYPES ID CORA EXP CORC CORA EXP CORC CORA EXP CORC

    PARC  shift, and go to state 41
    ','   shift, and go to state 42


State 33

   15 FUNCTION_LIST: TYPES . ID
   17              | TYPES . ID CORA EXP CORC
   18              | TYPES . ID CORA EXP CORC CORA EXP CORC CORA EXP CORC

    ID  shift, and go to state 43


State 34

   61 DECLARE_LIST: ID . ID ';'

    ID  shift, and go to state 44


State 35

   57 DECLARE_STRUCT: RSTRUCT ID LLAVA DECLARE_LIST . LLAVC
   58 DECLARE_LIST: DECLARE_LIST . TYPES ID ';'
   59             | DECLARE_LIST . ID ID ';'

    ID       shift, and go to state 45
    TSTRING  shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    RVECTOR  shift, and go to state 6
    INT      shift, and go to state 7
    LLAVC    shift, and go to state 46
    VOID     shift, and go to state 8

    TYPES  go to state 47


State 36

   60 DECLARE_LIST: TYPES . ID ';'

    ID  shift, and go to state 48


State 37

    9 FUNCTION: TYPES ID PARA PARC . LLAVA LIST_INST LLAVC

    LLAVA  shift, and go to state 49


State 38

    8 FUNCTION: TYPES ID PARA FUNCTION_LIST . PARC LLAVA LIST_INST LLAVC
   11 FUNCTION_LIST: FUNCTION_LIST . ',' TYPES ID
   12              | FUNCTION_LIST . ',' RVECTOR MENOR TYPES MAYOR ID
   13              | FUNCTION_LIST . ',' TYPES ID CORA EXP CORC
   14              | FUNCTION_LIST . ',' TYPES ID CORA EXP CORC CORA EXP CORC CORA EXP CORC

    PARC  shift, and go to state 50
    ','   shift, and go to state 42


State 39

   19 MAIN: TYPES RMAIN PARA PARC . LLAVA LIST_INST LLAVC

    LLAVA  shift, and go to state 51


State 40

   16 FUNCTION_LIST: RVECTOR MENOR . TYPES MAYOR ID

    TSTRING  shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    RVECTOR  shift, and go to state 6
    INT      shift, and go to state 7
    VOID     shift, and go to state 8

    TYPES  go to state 52


State 41

   10 FUNCTION: ID ID PARA FUNCTION_LIST PARC . LLAVA LIST_INST LLAVC

    LLAVA  shift, and go to state 53


State 42

   11 FUNCTION_LIST: FUNCTION_LIST ',' . TYPES ID
   12              | FUNCTION_LIST ',' . RVECTOR MENOR TYPES MAYOR ID
   13              | FUNCTION_LIST ',' . TYPES ID CORA EXP CORC
   14              | FUNCTION_LIST ',' . TYPES ID CORA EXP CORC CORA EXP CORC CORA EXP CORC

    TSTRING  shift, and go to state 2
    FLOAT    shift, and go to state 3
    BOOLEAN  shift, and go to state 4
    RVECTOR  shift, and go to state 54
    INT      shift, and go to state 7
    VOID     shift, and go to state 8

    TYPES  go to state 55


State 43

   15 FUNCTION_LIST: TYPES ID .
   17              | TYPES ID . CORA EXP CORC
   18              | TYPES ID . CORA EXP CORC CORA EXP CORC CORA EXP CORC

    CORA  shift, and go to state 56

    $default  reduce using rule 15 (FUNCTION_LIST)


State 44

   61 DECLARE_LIST: ID ID . ';'

    ';'  shift, and go to state 57


State 45

   59 DECLARE_LIST: DECLARE_LIST ID . ID ';'

    ID  shift, and go to state 58


State 46

   57 DECLARE_STRUCT: RSTRUCT ID LLAVA DECLARE_LIST LLAVC .

    $default  reduce using rule 57 (DECLARE_STRUCT)


State 47

   58 DECLARE_LIST: DECLARE_LIST TYPES . ID ';'

    ID  shift, and go to state 59


State 48

   60 DECLARE_LIST: TYPES ID . ';'

    ';'  shift, and go to state 60


State 49

    9 FUNCTION: TYPES ID PARA PARC LLAVA . LIST_INST LLAVC

    NUMERO     shift, and go to state 61
    ID         shift, and go to state 62
    STRING     shift, and go to state 63
    TSTRING    shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOLEAN    shift, and go to state 4
    RSTRUCT    shift, and go to state 64
    RVECTOR    shift, and go to state 65
    INT        shift, and go to state 7
    BOOLTRUE   shift, and go to state 66
    BOOLFALSE  shift, and go to state 67
    PARA       shift, and go to state 68
    CORA       shift, and go to state 69
    VOID       shift, and go to state 8
    NLL        shift, and go to state 70
    MENOS      shift, and go to state 71
    RIF        shift, and go to state 72
    RWHILE     shift, and go to state 73
    RFOR       shift, and go to state 74
    PRINTF     shift, and go to state 75
    RMEAN      shift, and go to state 76
    RMEDIAN    shift, and go to state 77
    RMODE      shift, and go to state 78
    RATOI      shift, and go to state 79
    RATOF      shift, and go to state 80
    RIOTA      shift, and go to state 81
    RBREAK     shift, and go to state 82
    RCONTINUE  shift, and go to state 83
    RRETURN    shift, and go to state 84
    NOT        shift, and go to state 85

    LIST_INST       go to state 86
    INSTRUCTION     go to state 87
    PRINT           go to state 88
    PUSHBACK        go to state 89
    PUSHFRONT       go to state 90
    GET             go to state 91
    SIZE            go to state 92
    REMOVE          go to state 93
    IF              go to state 94
    WHILE           go to state 95
    FOR             go to state 96
    EXPRESSION      go to state 97
    DECLARE_STRUCT  go to state 98
    CREATE_STRUCT   go to state 99
    DECLARATION     go to state 100
    ASSIGNATION     go to state 101
    BREAK           go to state 102
    CONTINUE        go to state 103
    RETURN          go to state 104
    MEAN            go to state 105
    MEDIAN          go to state 106
    MODE            go to state 107
    TYPES           go to state 108
    EXP             go to state 109
    ATOI            go to state 110
    ATOF            go to state 111
    IOTA            go to state 112
    INCREMENT       go to state 113
    PRIMITIVE       go to state 114
    LIST_ARR        go to state 115
    STRUCT_ACCESS   go to state 116
    DECLARE_VECTOR  go to state 117
    DECLARE_MATRIX  go to state 118
    CALL_EXP        go to state 119
    CALL_INST       go to state 120


State 50

    8 FUNCTION: TYPES ID PARA FUNCTION_LIST PARC . LLAVA LIST_INST LLAVC

    LLAVA  shift, and go to state 121


State 51

   19 MAIN: TYPES RMAIN PARA PARC LLAVA . LIST_INST LLAVC

    NUMERO     shift, and go to state 61
    ID         shift, and go to state 62
    STRING     shift, and go to state 63
    TSTRING    shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOLEAN    shift, and go to state 4
    RSTRUCT    shift, and go to state 64
    RVECTOR    shift, and go to state 65
    INT        shift, and go to state 7
    BOOLTRUE   shift, and go to state 66
    BOOLFALSE  shift, and go to state 67
    PARA       shift, and go to state 68
    CORA       shift, and go to state 69
    VOID       shift, and go to state 8
    NLL        shift, and go to state 70
    MENOS      shift, and go to state 71
    RIF        shift, and go to state 72
    RWHILE     shift, and go to state 73
    RFOR       shift, and go to state 74
    PRINTF     shift, and go to state 75
    RMEAN      shift, and go to state 76
    RMEDIAN    shift, and go to state 77
    RMODE      shift, and go to state 78
    RATOI      shift, and go to state 79
    RATOF      shift, and go to state 80
    RIOTA      shift, and go to state 81
    RBREAK     shift, and go to state 82
    RCONTINUE  shift, and go to state 83
    RRETURN    shift, and go to state 84
    NOT        shift, and go to state 85

    LIST_INST       go to state 122
    INSTRUCTION     go to state 87
    PRINT           go to state 88
    PUSHBACK        go to state 89
    PUSHFRONT       go to state 90
    GET             go to state 91
    SIZE            go to state 92
    REMOVE          go to state 93
    IF              go to state 94
    WHILE           go to state 95
    FOR             go to state 96
    EXPRESSION      go to state 97
    DECLARE_STRUCT  go to state 98
    CREATE_STRUCT   go to state 99
    DECLARATION     go to state 100
    ASSIGNATION     go to state 101
    BREAK           go to state 102
    CONTINUE        go to state 103
    RETURN          go to state 104
    MEAN            go to state 105
    MEDIAN          go to state 106
    MODE            go to state 107
    TYPES           go to state 108
    EXP             go to state 109
    ATOI            go to state 110
    ATOF            go to state 111
    IOTA            go to state 112
    INCREMENT       go to state 113
    PRIMITIVE       go to state 114
    LIST_ARR        go to state 115
    STRUCT_ACCESS   go to state 116
    DECLARE_VECTOR  go to state 117
    DECLARE_MATRIX  go to state 118
    CALL_EXP        go to state 119
    CALL_INST       go to state 120


State 52

   16 FUNCTION_LIST: RVECTOR MENOR TYPES . MAYOR ID

    MAYOR  shift, and go to state 123


State 53

   10 FUNCTION: ID ID PARA FUNCTION_LIST PARC LLAVA . LIST_INST LLAVC

    NUMERO     shift, and go to state 61
    ID         shift, and go to state 62
    STRING     shift, and go to state 63
    TSTRING    shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOLEAN    shift, and go to state 4
    RSTRUCT    shift, and go to state 64
    RVECTOR    shift, and go to state 65
    INT        shift, and go to state 7
    BOOLTRUE   shift, and go to state 66
    BOOLFALSE  shift, and go to state 67
    PARA       shift, and go to state 68
    CORA       shift, and go to state 69
    VOID       shift, and go to state 8
    NLL        shift, and go to state 70
    MENOS      shift, and go to state 71
    RIF        shift, and go to state 72
    RWHILE     shift, and go to state 73
    RFOR       shift, and go to state 74
    PRINTF     shift, and go to state 75
    RMEAN      shift, and go to state 76
    RMEDIAN    shift, and go to state 77
    RMODE      shift, and go to state 78
    RATOI      shift, and go to state 79
    RATOF      shift, and go to state 80
    RIOTA      shift, and go to state 81
    RBREAK     shift, and go to state 82
    RCONTINUE  shift, and go to state 83
    RRETURN    shift, and go to state 84
    NOT        shift, and go to state 85

    LIST_INST       go to state 124
    INSTRUCTION     go to state 87
    PRINT           go to state 88
    PUSHBACK        go to state 89
    PUSHFRONT       go to state 90
    GET             go to state 91
    SIZE            go to state 92
    REMOVE          go to state 93
    IF              go to state 94
    WHILE           go to state 95
    FOR             go to state 96
    EXPRESSION      go to state 97
    DECLARE_STRUCT  go to state 98
    CREATE_STRUCT   go to state 99
    DECLARATION     go to state 100
    ASSIGNATION     go to state 101
    BREAK           go to state 102
    CONTINUE        go to state 103
    RETURN          go to state 104
    MEAN            go to state 105
    MEDIAN          go to state 106
    MODE            go to state 107
    TYPES           go to state 108
    EXP             go to state 109
    ATOI            go to state 110
    ATOF            go to state 111
    IOTA            go to state 112
    INCREMENT       go to state 113
    PRIMITIVE       go to state 114
    LIST_ARR        go to state 115
    STRUCT_ACCESS   go to state 116
    DECLARE_VECTOR  go to state 117
    DECLARE_MATRIX  go to state 118
    CALL_EXP        go to state 119
    CALL_INST       go to state 120


State 54

   12 FUNCTION_LIST: FUNCTION_LIST ',' RVECTOR . MENOR TYPES MAYOR ID
   82 TYPES: RVECTOR .

    MENOR  shift, and go to state 125

    $default  reduce using rule 82 (TYPES)


State 55

   11 FUNCTION_LIST: FUNCTION_LIST ',' TYPES . ID
   13              | FUNCTION_LIST ',' TYPES . ID CORA EXP CORC
   14              | FUNCTION_LIST ',' TYPES . ID CORA EXP CORC CORA EXP CORC CORA EXP CORC

    ID  shift, and go to state 126


State 56

   17 FUNCTION_LIST: TYPES ID CORA . EXP CORC
   18              | TYPES ID CORA . EXP CORC CORA EXP CORC CORA EXP CORC

    NUMERO     shift, and go to state 61
    ID         shift, and go to state 127
    STRING     shift, and go to state 63
    BOOLTRUE   shift, and go to state 66
    BOOLFALSE  shift, and go to state 67
    PARA       shift, and go to state 68
    CORA       shift, and go to state 69
    NLL        shift, and go to state 70
    MENOS      shift, and go to state 71
    RMEAN      shift, and go to state 76
    RMEDIAN    shift, and go to state 77
    RMODE      shift, and go to state 78
    RATOI      shift, and go to state 79
    RATOF      shift, and go to state 80
    RIOTA      shift, and go to state 81
    NOT        shift, and go to state 85
